0.54.1.0/_sources/Reference/NodeReference/GafferOSL/OSLLight.md.txt
OSLLight
========

Creates lights by assigning an emissive OSL shader to some simple geometry.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs
an empty scene.

name
----

The name of the object in the output scene.

sets
----

A list of sets to include the object in. The
names should be separated by spaces.

transform
---------

The transform applied to the object.

parameters
----------

The parameters of the light shader - these will vary based on the light type.

defaultLight
------------

Whether this light illuminates all geometry by default. When
toggled, the light will be added to the "defaultLights" set, which
can be referenced in set expressions and manipulated by downstream
nodes.

visualiserScale
---------------

The scale of the visualisation in the viewport.

shaderName
----------

The OSL shader to be assigned to the light
geometry.

shape
-----

The shape of the light. Typically, disks
should be used with spotlight shaders and spheres
should be used with point light shaders. The "Geometry"
shape allows the use of custom geometry specific to a
particular renderer.

radius
------

The radius of the disk or sphere shape. Has no effect for
other shapes.

geometryType
------------

The type of geometry to create when shape is set
to "Geometry". This should contain the name of a geometry
type specific to the renderer being used.

geometryBound
-------------

The bounding box of the geometry. Only relevant when the
shape is set to "Geometry".

geometryParameters
------------------

Arbitary parameters which specify the features of the "Geometry"
shape type.

attributes
----------

Arbitrary attributes which are applied to the light. Typical
uses include setting renderer specific visibility attributes
to hide the shape from the camera.